mb before rebase conflicts

--- a/simple.html
+++ b/simple.html
@@ -13,6 +13,7 @@
 <body>
 	<main class="container">
 	<!--just some comment-->
+	Adding changes
 	<!-- Content Goes Here -->
 		<p>
 			Just some content
