Adding changes abter rebasing conflict

--- a/simple.html
+++ b/simple.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<main class="container">
-	<!--just some comment-->
+	<!--just some comment in a little rebo-->
 	Adding changes
 	<!-- Content Goes Here -->
 		<p>
