local: updating simple.html

--- a/simple.html
+++ b/simple.html
@@ -20,7 +20,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy;2014 Alzan Jerliu</p>
+		<p>&copy;2014 Alzan Jerliu All rights notice</p>
 	</footer>
 </body>
 </html>
