Done with simple.html update

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>A Great Website</title>
+	<title>A Great Website-just making a change</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,6 +17,7 @@
 	<!-- Content Goes Here -->
 		<p>
 			Just some content
+			Adding more content
 		</p>
 	</main>
 	<footer class="container">
