Changes after git stash branch command

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>A Great Website-just making a change</title>
+	<title>A Great Website-just making a change good</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
